espresso (0.99.48) UNRELEASED; urgency=low

  * Make the intro message a bit less scary, and make it clear that this is
    a beta release.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 13 Apr 2006 18:18:32 +0100

espresso (0.99.47) dapper; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Fix mountpoints page
    - Update mountpoints_to_summary
    - Language page returns the selected language
    - Widgets get translated into selected language
    - Add Kubuntu logo
    - Timezone page labels work

  [ Colin Watson ]
  * When removing packages that don't belong on the installed system, purge
    their configuration too.
  * Remove kernels that aren't appropriate for the current system, using
    base-installer's kernel selection logic. This fixes 32-bit powerpc
    systems, which otherwise would try to boot a 64-bit kernel by default.
  * Rephrase all strings that talk about "Ubuntu" so that Kubuntu, Edubuntu,
    and Xubuntu don't have branding problems. The boot splash image, desktop
    wallpaper, and so on should be enough to indicate what you're
    installing.
  * GTK frontend:
    - Go back to using 'gksudo --desktop %k' rather than sudo in the
      .desktop file, now that it seems to be fixed; this gets us startup
      notification for free.
  * Automatic update of included source packages: kbd-chooser
    1.23ubuntu14, localechooser 0.27ubuntu16, tzsetup 1:0.8ubuntu6.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 13 Apr 2006 16:33:14 +0100

espresso (0.99.46) dapper; urgency=low

  * Disable swap before starting gparted or qtparted. partman will enable it
    again after mountpoint selection if any swap partitions were selected.
  * Install debconf-get again, lost in the component packaging merge.
  * Reconfigure the locale according to the selected country after the
    timezone question.
  * Set HOME=/root for debconffiltered processes. This fixes
    yaboot-installer, since the hfsutils are run in /target and want to