@@ -2,6 +2,8 @@ espresso (0.99.48) UNRELEASED; urgency=low
 
   * Make the intro message a bit less scary, and make it clear that this is
     a beta release.
+  * GTK frontend:
+    - Set a busy cursor while waiting for debconffiltered subprocesses.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 13 Apr 2006 18:18:32 +0100
 
